--- a/.github/workflows/draft_nightly_nanocl.yml
+++ b/.github/workflows/draft_nightly_nanocl.yml
@@ -52,7 +52,8 @@ jobs:
       - name: Install dependencies
         run: |
           sudo dpkg --add-architecture $PKG_ARCH
-          sudo apt install -y pkg-config:$PKG_ARCH gcc:$PKG_ARCH musl-dev:$PKG_ARCH libpq-dev:$PKG_ARCH libssl-dev:$PKG_ARCH musl-tools:$PKG_ARCH libc-dev:$PKG_ARCH g++:$PKG_ARCH make:$PKG_ARCH
+          sudo apt-get update -y
+          sudo apt-get install -y pkg-config:$PKG_ARCH gcc:$PKG_ARCH musl-dev:$PKG_ARCH libpq-dev:$PKG_ARCH libssl-dev:$PKG_ARCH musl-tools:$PKG_ARCH libc-dev:$PKG_ARCH g++:$PKG_ARCH make:$PKG_ARCH
           rustup target add $TARGET_ARCH
       # Fix git permission
       - name: Fix git permission
