--- a/.github/workflows/draft_nightly_nanocl.yml
+++ b/.github/workflows/draft_nightly_nanocl.yml
@@ -20,7 +20,7 @@ jobs:
         target_arch: ["amd64:x86_64-unknown-linux-musl", "arm64:aarch64-unknown-linux-musl"]
 
     runs-on: ubuntu-latest
-    container: rust:1.73.0
+    container: rust:1.73.0-bullseye
 
     steps:
       # Checkout the repository
@@ -52,10 +52,10 @@ jobs:
       # Install required dependencies
       - name: Install dependencies
         run: |
-          sudo apt-get update -y
-          sudo dpkg --add-architecture $PKG_ARCH
-          sudo apt-get update -y
-          sudo apt-get install -y pkg-config:$PKG_ARCH gcc:$PKG_ARCH musl-dev:$PKG_ARCH libpq-dev:$PKG_ARCH libssl-dev:$PKG_ARCH musl-tools:$PKG_ARCH libc-dev:$PKG_ARCH g++:$PKG_ARCH make:$PKG_ARCH
+          apt-get update -y
+          dpkg --add-architecture $PKG_ARCH
+          apt-get update -y
+          apt-get install -y pkg-config:$PKG_ARCH gcc:$PKG_ARCH musl-dev:$PKG_ARCH libpq-dev:$PKG_ARCH libssl-dev:$PKG_ARCH musl-tools:$PKG_ARCH libc-dev:$PKG_ARCH g++:$PKG_ARCH make:$PKG_ARCH
           rustup target add $TARGET_ARCH
       # Fix git permission
       - name: Fix git permission
