--- a/.github/workflows/draft_nightly_nanocl.yml
+++ b/.github/workflows/draft_nightly_nanocl.yml
@@ -55,7 +55,7 @@ jobs:
           apt-get update -y
           dpkg --add-architecture $PKG_ARCH
           apt-get update -y
-          apt-get install -y pkg-config gcc musl-dev:$PKG_ARCH libpq-dev:$PKG_ARCH libssl-dev:$PKG_ARCH musl-tools:$PKG_ARCH libc-dev:$PKG_ARCH g++ make git build-base:$PKG_ARCH dpkg pandoc github-cli
+          apt-get install -y pkg-config gcc musl-dev:$PKG_ARCH libpq-dev:$PKG_ARCH libssl-dev:$PKG_ARCH musl-tools:$PKG_ARCH libc-dev:$PKG_ARCH g++ make git dpkg pandoc gh
           rustup target add $TARGET_ARCH
       # Fix git permission
       - name: Fix git permission
