--- a/.github/workflows/draft_nightly_nanocl.yml
+++ b/.github/workflows/draft_nightly_nanocl.yml
@@ -49,7 +49,7 @@ jobs:
           apt-get update -y
           dpkg --add-architecture $PKG_ARCH
           apt-get update -y
-          apt-get install -y pkg-config musl-dev:$PKG_ARCH libpq-dev:$PKG_ARCH libssl-dev:$PKG_ARCH musl-tools:$PKG_ARCH libc-dev:$PKG_ARCH make git dpkg pandoc curl
+          apt-get install -y pkg-config musl-dev libpq-dev libssl-dev musl-tools libc-dev make git dpkg pandoc curl
           if [ "$PKG_ARCH" = "arm64" ]; then
             apt-get install -y libc6-dev-armhf-cross gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu
           fi
