--- a/.github/workflows/draft_nightly_nanocl.yml
+++ b/.github/workflows/draft_nightly_nanocl.yml
@@ -51,7 +51,7 @@ jobs:
           apt-get update -y
           apt-get install -y pkg-config musl-dev libpq-dev libssl-dev musl-tools libc-dev make git dpkg pandoc curl
           if [ "$PKG_ARCH" = "arm64" ]; then
-            apt-get install -y gcc-arm-linux-gnueabi binutils-arm-linux-gnueabi
+            apt-get install -y gcc-arm-linux-gnueabi binutils-arm-linux-gnueabi musl-dev:arm64 musl-tools:arm64 gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu
           fi
           type -p curl >/dev/null || (apt-get update && apt-get install curl -y)
           curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
