--- a/.github/workflows/draft_nightly_nanocl.yml
+++ b/.github/workflows/draft_nightly_nanocl.yml
@@ -70,9 +70,7 @@ jobs:
           PKG_TARGET_ARCH: ${{ matrix.target_arch }}
         run: |
           if [ "$PKG_ARCH" = "arm64" ]; then
-            export CC=aarch64-linux-gnu-gcc
-            export RUSTFLAGS="-C target-feature=+crt-static -C link-arg=-lgcc"
-            export CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_LINKER=aarch64-linux-gnu-gcc
+            export RUSTFLAGS="-C target-feature=+crt-static -C aarch64-linux-gnu-gcc -C link-arg=-lgcc"
           else
             export RUSTFLAGS="-C target-feature=+crt-static"
           fi
