chore/workflow: fix nanocl release

--- a/.github/workflows/draft_nightly_nanocl.yml
+++ b/.github/workflows/draft_nightly_nanocl.yml
@@ -70,7 +70,7 @@ jobs:
           PKG_TARGET_ARCH: ${{ matrix.target_arch }}
         run: |
           if [ "$PKG_ARCH" = "arm64" ]; then
-            export RUSTFLAGS="-C target-feature=+crt-static -C aarch64-linux-gnu-gcc -C link-arg=-lgcc"
+            export RUSTFLAGS="-C target-feature=+crt-static -C linker=aarch64-linux-gnu-gcc -C link-arg=-lgcc"
           else
             export RUSTFLAGS="-C target-feature=+crt-static"
           fi
