chore/workflow: fix nanocl release

--- a/bin/nanocl/.cargo/config.toml
+++ b/bin/nanocl/.cargo/config.toml
@@ -1,3 +1,3 @@
 [target.aarch64-unknown-linux-musl]
-linker = "aarch64-linux-gnu-gcc"
+linker = "gcc-aarch64-none-elf"
 rustflags = ["-C", "target-feature=+crt-static", "-C", "link-arg=-lgcc"]
