--- a/.github/workflows/draft_nightly_nanocl.yml
+++ b/.github/workflows/draft_nightly_nanocl.yml
@@ -46,9 +46,9 @@ jobs:
       # Install required dependencies
       - name: Install dependencies
         run: |
-          apk add --update alpine-sdk musl-dev g++ make libpq-dev openssl-dev git upx perl build-base dpkg pandoc github-cli
+          apk add --update alpine-sdk musl-dev g++ make libpq-dev openssl-dev git upx perl build-base dpkg pandoc github-cli gcc
           if [ "$PKG_ARCH" = "arm64" ]; then
-            apk add --update gcc-aarch64-none-elf binutils-aarch64-none-elf
+            apk add --update gcc-aarch64-none-elf binutils-aarch64-none-elf avr-libc
             # apt-get install -y gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi binutils-arm-linux-gnueabi gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu
           fi
           rustup target add $TARGET_ARCH
@@ -63,7 +63,6 @@ jobs:
         run: |
           if [ "$PKG_ARCH" = "arm64" ]; then
             export RUSTFLAGS="-C target-feature=+crt-static"
-            export CC=aarch64-none-elf-gcc
           else
             export RUSTFLAGS="-C target-feature=+crt-static"
           fi
