--- a/.github/workflows/draft_nightly_nanocl.yml
+++ b/.github/workflows/draft_nightly_nanocl.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        target_arch: ["amd64:x86_64-unknown-linux-musl", "arm64:aarch64-unknown-linux-musl"]
+        target_arch: ["amd64:x86_64-unknown-linux-musl"]
 
     runs-on: ubuntu-latest
     container: rust:1.73.0-alpine3.18
@@ -49,7 +49,6 @@ jobs:
           apk add --update alpine-sdk musl-dev g++ make libpq-dev openssl-dev git upx perl build-base dpkg pandoc github-cli gcc
           if [ "$PKG_ARCH" = "arm64" ]; then
             apk add --update gcc-aarch64-none-elf binutils-aarch64-none-elf avr-libc
-            # apt-get install -y gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi binutils-arm-linux-gnueabi gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu
           fi
           rustup target add $TARGET_ARCH
       # Fix git permission
@@ -62,9 +61,9 @@ jobs:
           PKG_TARGET_ARCH: ${{ matrix.target_arch }}
         run: |
           if [ "$PKG_ARCH" = "arm64" ]; then
-            export CC_aarch64_unknown_linux_musl=aarch64-none-elf-gcc
-            export CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_LINKER=aarch64-none-elf-gcc
-            export RUSTFLAGS="-C target-feature=+crt-static -C link-arg=-lgcc"
+            # export CC_aarch64_unknown_linux_musl=aarch64-none-elf-gcc
+            # export CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_LINKER=aarch64-none-elf-gcc
+            # export RUSTFLAGS="-C target-feature=+crt-static -C link-arg=-lgcc"
             # export RUSTFLAGS="-C target-feature=+crt-static"
             # export CC=aarch64-none-elf-gcc
             # export CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_LINKER=aarch64-none-elf-gcc
