--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,9 +13,11 @@ services:
     container_name: nstore.system.c
     hostname: nstore.nanocl.internal
     image: cockroachdb/cockroach:v23.1.11
+    entrypoint: /bin/sh
     tty: true
     ports:
       - 26257:26257
+      - 26258:26258
     networks:
       - system
     volumes:
@@ -25,9 +27,15 @@ services:
     environment:
       - TZ=Europe/Paris
     command:
-      - start-single-node
-      - --insecure
-      - --listen-addr=:26257
+      - -c
+      - |
+        if [[ ! -f "/ca/ca.key" ]]; then
+          echo "generating certs"
+          cockroach cert create-ca --certs-dir=/certs --ca-key=/ca/ca.key
+          cockroach cert create-node 127.0.0.1 nstore.nanocl.internal --certs-dir=/certs --ca-key=/ca/ca.key
+          cockroach cert create-client root --certs-dir=/certs --ca-key=/ca/ca.key
+        fi
+        cockroach start-single-node --certs-dir=/certs --listen-addr=:26257 --sql-addr=:26258
     labels:
       - io.nanocl=enabled
       - io.nanocl.c=nstore.system
