feature/nanocl: state apply --reload

--- a/bin/nanocld/.env
+++ b/bin/nanocld/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://root:root@nstore.nanocl.internal:26257/defaultdb
+DATABASE_URL=postgres://root:root@nstore.nanocl.internal:26258/defaultdb?sslmode=verify-full&sslcert=$HOME/.nanocl_dev/state/store/certs/client.root.crt&sslkey=$HOME/.nanocl_dev/state/store/certs/client.root.key&sslrootcert=$HOME/.nanocl_dev/state/store/certs/ca.crt
