--- a/crates/nanocl_stubs/Cargo.toml
+++ b/crates/nanocl_stubs/Cargo.toml
@@ -16,6 +16,7 @@ bench = false
 default = ["serde"]
 serde = ["dep:serde", "uuid/serde", "chrono/serde"]
 utoipa = ["dep:utoipa"]
+test = []
 
 [dependencies]
 bollard-next = { version = "0.15.4" }
