--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ opt-level = 0
 
 [profile.release]
 strip = true
+# Todo test settings for release (segfault on macosx)
 # opt-level = "z"
 # lto = true
 # codegen-units = 1
@@ -26,10 +27,3 @@ nanocl_error = { path = "crates/nanocl_error" }
 nanocl_stubs = { path = "crates/nanocl_stubs" }
 nanocl_utils = { path = "crates/nanocl_utils" }
 nanocld_client = { path = "crates/nanocld_client" }
-# vpnkitrc = { path = "../vpnkitrc" }
-# ntex-cors = { git = "https://github.com/ntex-rs/ntex-extras.git" }
-# ntex-files = { git = "https://github.com/leon3s/ntex-extras", branch = "upgrade-ntex-version" }
-# ntex-multipart = { git = "https://github.com/leon3s/ntex-extras" }
-# bollard-next = { path = "../bollard" }
-# ntex = { git = "https://github.com/ntex-rs/ntex" }
-# ntex-tokio = { git = "https://github.com/ntex-rs/ntex" }
