--- a/bin/nanocld/Cargo.toml
+++ b/bin/nanocld/Cargo.toml
@@ -25,7 +25,7 @@ dev = [
   "nanocl_utils/ntex_swagger",
   "nanocl_utils/ntex_test_client",
 ]
-test = ["nanocl_utils/ntex_test_client"]
+test = ["nanocl_utils/ntex_test_client", "nanocl_stubs/test"]
 release = []
 
 [build-dependencies]
@@ -58,7 +58,7 @@ clap = { version = "4.4.5", features = ["derive"] }
 url = { version = "2", features = ["serde"] }
 serde = { version = "1.0.191", features = ["derive"] }
 uuid = { version = "1.4", features = ["serde", "v4"] }
-ntex = { version = "0.7.7", features = ["openssl", "tokio"] }
+ntex = { version = "0.7.8", features = ["openssl", "tokio"] }
 diesel = { version = "2.1.2", features = [
   "postgres",
   "r2d2",
