--- a/crates/nanocl_utils/Cargo.toml
+++ b/crates/nanocl_utils/Cargo.toml
@@ -24,11 +24,12 @@ ntex_swagger = [
 ]
 unix = ["dep:libc", "nanocl_error/io"]
 versioning = []
+test = []
 build_tools = ["dep:clap", "dep:clap_mangen"]
 ntex_test_client = ["dep:ntex", "dep:serde"]
 
 [dependencies]
-ntex = { version = "0.7.7", optional = true }
+ntex = { version = "0.7.8", optional = true }
 log = { version = "0.4.20", optional = true }
 env_logger = { version = "0.10.0", optional = true }
 serde = { version = "1.0.191", features = ["derive"], optional = true }
