--- a/examples/replication.yml
+++ b/examples/replication.yml
@@ -31,3 +31,11 @@ Cargoes:
       Image: ghcr.io/nxthat/nanocl-get-started:latest
       Env:
         - APP=GET_STARTED1
+  - Name: replication-example
+    Replication:
+      Mode:
+        Number: 3
+    Container:
+      Image: nexthat/nanocl-get-started:latest
+      Env:
+        - APP=GET_STARTED1
