fix: double tag in nanocl-get-started image

--- a/bin/ncproxy/tests/test-deploy.yml
+++ b/bin/ncproxy/tests/test-deploy.yml
@@ -6,4 +6,4 @@ Namespace: global
 Cargoes:
   - Name: get-started
     Container:
-      Image: ghcr.io/nxthat/nanocl-get-started:latest:latest
+      Image: ghcr.io/nxthat/nanocl-get-started:latest
