--- a/examples/deploy_secrets.yml
+++ b/examples/deploy_secrets.yml
@@ -33,6 +33,6 @@ Cargoes:
     Secrets:
       - deploy-secret
     Container:
-      Image: ghcr.io/nxthat/nanocl-get-started:latest:latest
+      Image: ghcr.io/nxthat/nanocl-get-started:latest
       Env:
         - APP=GET_STARTED
