--- a/examples/double_port_error.yml
+++ b/examples/double_port_error.yml
@@ -29,12 +29,12 @@ Resources:
 Cargoes:
   - Name: deploy-example
     Container:
-      Image: ghcr.io/nxthat/nanocl-get-started:latest:latest
+      Image: ghcr.io/nxthat/nanocl-get-started:latest
       Env:
         - APP=GET_STARTED1
 
   - Name: deploy-example2
     Container:
-      Image: ghcr.io/nxthat/nanocl-get-started:latest:latest
+      Image: ghcr.io/nxthat/nanocl-get-started:latest
       Env:
         - APP=GET_STARTED2
