--- a/examples/replication.yml
+++ b/examples/replication.yml
@@ -28,6 +28,6 @@ Cargoes:
     Replication:
       Mode: Auto
     Container:
-      Image: ghcr.io/nxthat/nanocl-get-started:latest:latest
+      Image: ghcr.io/nxthat/nanocl-get-started:latest
       Env:
         - APP=GET_STARTED1
