refactor: use of rust and multiarch image nanocl-get-started (#649)
* refactor: use of rust and multiarch image ghcr.io/nxthat/nanocl-get-started:latest

* fix: double tag in nanocl-get-started image

* refactor: deploy_example.yml

--- a/examples/cargo_example.yml
+++ b/examples/cargo_example.yml
@@ -8,4 +8,4 @@ Namespace: cargo-example
 Cargoes:
   - Name: cargo-example
     Container:
-      Image: nexthat/nanocl-get-started:latest
+      Image: ghcr.io/nxthat/nanocl-get-started:latest
