--- a/examples/deploy_ssl.yml
+++ b/examples/deploy_ssl.yml
@@ -81,6 +81,6 @@ Resources:
 Cargoes:
   - Name: secret-tls
     Container:
-      Image: nexthat/nanocl-get-started:latest
+      Image: ghcr.io/nxthat/nanocl-get-started:latest
       Env:
         - APP=GET_STARTED
