--- a/examples/disable_logging.yml
+++ b/examples/disable_logging.yml
@@ -31,6 +31,6 @@ Resources:
 Cargoes:
   - Name: deploy-example
     Container:
-      Image: nexthat/nanocl-get-started:latest
+      Image: ghcr.io/nxthat/nanocl-get-started:latest
       Env:
         - APP=DISABLE_LOGGING
