--- a/examples/success_init_container.yml
+++ b/examples/success_init_container.yml
@@ -14,6 +14,6 @@ Cargoes:
       Replication:
         Name: Auto
       Hostname: deploy-example
-      Image: nexthat/nanocl-get-started:latest
+      Image: ghcr.io/nxthat/nanocl-get-started:latest
       Env:
         - APP=GET_STARTED
